--- a/index.html
+++ b/index.html
@@ -1,75 +1,80 @@
-<section class="min-h-[calc(100vh-120px)] flex items-center justify-center section-spacing"> <div class="relative max-w-4xl w-full px-4"> <!-- follower glow --> <div class="cursor-follower" aria-hidden="true"></div>
-<div id="authCard"
-     class="tile glass relative mx-auto w-full rounded-2xl p-6 md:p-8 reveal"
-     style="transform-style: preserve-3d;">
-  <!-- decorative glow -->
-  <span class="tile-glow"></span>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>AlgoRhythm | Sign In / Sign Up</title> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet"> <link rel="stylesheet" href="styles.css" /> </head> <body> <!-- 3D background: coding matrix + music EQ --> <div class="bg3d"> <canvas id="bgCanvas" aria-hidden="true"></canvas> <div class="bg-blobs blob-1"></div> <div class="bg-blobs blob-2"></div> </div> <!-- Header --> <header class="header"> <div class="brand"> <div class="brand-logo">AR</div> <div class="brand-name">AlgoRhythm</div> </div> <a class="brand-link" href="/">Back to Home</a> </header> <!-- Auth container --> <div class="container" id="container"> <!-- Toggle background band --> <div class="toggle-box"> <div class="toggle-panel toggle-left"> <h1>Join the flow</h1> <p>Code together, sync playlists, and track progress.</p> <button class="btn" id="toRegister">Create account</button> </div> <div class="toggle-panel toggle-right"> <h1>Welcome back</h1> <p>Keep coding in sync — sign in to continue.</p> <button class="btn" id="toLogin">Sign in</button> </div> </div> <!-- Sign In -->
+<section class="form-box login">
+  <form id="loginForm" autocomplete="on">
+    <h1>Sign In</h1>
+    <p>Continue with email or use social login.</p>
 
-  <!-- heading -->
-  <div class="text-center mb-6">
-    <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight text-gradient">Welcome to AlgoRhythm</h1>
-    <p class="text-sm md:text-base text-[color:var(--muted)] mt-2">Sign in to sync problems, playlists, and progress.</p>
-  </div>
+    <div class="input-box">
+      <input type="email" id="loginEmail" placeholder="Email" required />
+      <i>@</i>
+    </div>
+    <div class="input-box">
+      <input type="password" id="loginPassword" placeholder="Password" minlength="6" required />
+      <i>-  -  - </i>
+    </div>
 
-  <!-- content grid -->
-  <div class="grid md:grid-cols-2 gap-4 md:gap-6">
-    <!-- OAuth quick sign-in -->
-    <div class="tile glass p-4 md:p-5 rounded-xl reveal-left stagger-1">
-      <h2 class="text-lg font-semibold mb-3">Continue with</h2>
+    <div class="forgot-link">
+      <a href="/forgot">Forgot password?</a>
+    </div>
 
-      <button id="btnGoogle"
-              class="btn-primary cta-glow w-full mb-3 flex items-center gap-3 justify-center">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+    <button class="btn" type="submit">Sign In</button>
+
+    <p style="margin:14px 0 8px;color:var(--muted)">Or continue with</p>
+    <div class="social-icons">
+      <a id="loginGoogle" title="Google" aria-label="Sign in with Google">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
           <path d="M23.04 12.261c0-.815-.073-1.6-.209-2.352H12v4.45h6.19a5.29 5.29 0 0 1-2.293 3.47v2.878h3.71c2.176-2.003 3.433-4.956 3.433-8.446Z" fill="#4285F4"/>
           <path d="M12 24c3.105 0 5.713-1.03 7.618-2.793l-3.71-2.878c-1.03.69-2.35 1.1-3.908 1.1-3.004 0-5.55-2.03-6.458-4.76H1.704v2.987A11.997 11.997 0 0 0 12 24Z" fill="#34A853"/>
           <path d="M5.542 14.67A7.2 7.2 0 0 1 5.17 12c0-.93.16-1.83.372-2.67V6.343H1.704A12 12 0 0 0 0 12c0 1.92.46 3.73 1.704 5.657L5.542 14.67Z" fill="#FBBC04"/>
           <path d="M12 4.75c1.686 0 3.197.58 4.387 1.72l3.29-3.29C17.705 1.17 15.105 0 12 0 7.704 0 3.996 2.457 1.704 6.343L5.54 9.33C6.45 6.6 8.996 4.75 12 4.75Z" fill="#EA4335"/>
         </svg>
-        Sign in with Google
-      </button>
-
-      <button id="btnGithub"
-              class="btn-ghost w-full flex items-center gap-3 justify-center">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+      </a>
+      <a id="loginGithub" title="GitHub" aria-label="Sign in with GitHub">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M12 .5A11.5 11.5 0 0 0 .5 12c0 5.08 3.29 9.38 7.86 10.89.58.11.79-.26.79-.57v-2.2c-3.2.71-3.87-1.37-3.87-1.37-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.7.08-.7 1.18.08 1.81 1.22 1.81 1.22 1.05 1.81 2.77 1.29 3.45.98.11-.77.41-1.29.74-1.58-2.55-.29-5.23-1.28-5.23-5.68 0-1.26.45-2.29 1.2-3.1-.12-.29-.52-1.47.11-3.06 0 0 .97-.31 3.18 1.19a11 11 0 0 1 5.8 0c2.21-1.5 3.18-1.19 3.18-1.19.63 1.59.24 2.77.12 3.06.75.81 1.2 1.84 1.2 3.1 0 4.41-2.69 5.39-5.25 5.67.42.36.8 1.07.8 2.16v3.21c0 .32.21.69.8.57A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5Z"/>
         </svg>
-        Sign in with GitHub
-      </button>
+      </a>
+    </div>
+  </form>
+</section>
 
-      <p class="text-xs text-[color:var(--muted)] mt-3">
-        We’ll never post on your behalf. By continuing, you agree to our terms and privacy policy.
-      </p>
+<!-- Sign Up -->
+<section class="form-box register" aria-hidden="true">
+  <form id="registerForm" autocomplete="on">
+    <h1>Create Account</h1>
+    <p>Start collaborating on problems and playlists.</p>
+
+    <div class="input-box">
+      <input type="text" id="regName" placeholder="Full name" required />
+      <i>👤</i>
+    </div>
+    <div class="input-box">
+      <input type="email" id="regEmail" placeholder="Email" required />
+      <i>@</i>
+    </div>
+    <div class="input-box">
+      <input type="password" id="regPassword" placeholder="Password (min 6 chars)" minlength="6" required />
+      <i>-  -  - </i>
     </div>
 
-    <!-- Email form -->
-    <div class="tile glass p-4 md:p-5 rounded-xl reveal-right stagger-2">
-      <h2 class="text-lg font-semibold mb-3">Use your email</h2>
-      <form id="emailForm" class="space-y-3" autocomplete="on">
-        <div>
-          <label class="block text-sm mb-1 text-[color:var(--muted)]" for="email">Email</label>
-          <input id="email" type="email" required
-                 class="w-full h-11 px-3 rounded-xl bg-[#12121a] border border-[rgba(255,255,255,0.15)] text-white outline-none focus:border-[rgba(245,158,11,0.7)] focus:ring-4 focus:ring-[rgba(245,158,11,0.12)] transition" placeholder="you@example.com" />
-        </div>
-        <div>
-          <label class="block text-sm mb-1 text-[color:var(--muted)]" for="password">Password</label>
-          <input id="password" type="password" minlength="6" required
-                 class="w-full h-11 px-3 rounded-xl bg-[#12121a] border border-[rgba(255,255,255,0.15)] text-white outline-none focus:border-[rgba(245,158,11,0.7)] focus:ring-4 focus:ring-[rgba(245,158,11,0.12)] transition" placeholder="- - - - - - - - " />
-        </div>
-        <div class="flex items-center justify-between">
-          <label class="flex items-center gap-2 text-sm text-[color:var(--muted)]" for="remember">
-            <input id="remember" type="checkbox" class="accent-[#F59E0B]" />
-            Remember me
-          </label>
-          <a class="text-sm text-[color:var(--accent)] hover:text-white transition" href="/forgot">Forgot password?</a>
-        </div>
-        <button type="submit" class="btn-primary w-full">Sign In</button>
-      </form>
+    <button class="btn" type="submit">Sign Up</button>
 
-      <div class="text-sm text-center text-[color:var(--muted)] mt-3">
-        New to AlgoRhythm?
-        <a href="/signup" class="text-[color:var(--accent)] hover:text-white transition">Create an account</a>
-      </div>
+    <p style="margin:14px 0 8px;color:var(--muted)">Or continue with</p>
+    <div class="social-icons">
+      <a id="signupGoogle" title="Google" aria-label="Sign up with Google">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+          <path d="M23.04 12.261c0-.815-.073-1.6-.209-2.352H12v4.45h6.19a5.29 5.29 0 0 1-2.293 3.47v2.878h3.71c2.176-2.003 3.433-4.956 3.433-8.446Z" fill="#4285F4"/>
+          <path d="M12 24c3.105 0 5.713-1.03 7.618-2.793l-3.71-2.878c-1.03.69-2.35 1.1-3.908 1.1-3.004 0-5.55-2.03-6.458-4.76H1.704v2.987A11.997 11.997 0 0 0 12 24Z" fill="#34A853"/>
+          <path d="M5.542 14.67A7.2 7.2 0 0 1 5.17 12c0-.93.16-1.83.372-2.67V6.343H1.704A12 12 0 0 0 0 12c0 1.92.46 3.73 1.704 5.657L5.542 14.67Z" fill="#FBBC04"/>
+          <path d="M12 4.75c1.686 0 3.197.58 4.387 1.72l3.29-3.29C17.705 1.17 15.105 0 12 0 7.704 0 3.996 2.457 1.704 6.343L5.54 9.33C6.45 6.6 8.996 4.75 12 4.75Z" fill="#EA4335"/>
+        </svg>
+      </a>
+      <a id="signupGithub" title="GitHub" aria-label="Sign up with GitHub">
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M12 .5A11.5 11.5 0 0 0 .5 12c0 5.08 3.29 9.38 7.86 10.89.58.11.79-.26.79-.57v-2.2c-3.2.71-3.87-1.37-3.87-1.37-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.7.08-.7 1.18.08 1.81 1.22 1.81 1.22 1.05 1.81 2.77 1.29 3.45.98.11-.77.41-1.29.74-1.58-2.55-.29-5.23-1.28-5.23-5.68 0-1.26.45-2.29 1.2-3.1-.12-.29-.52-1.47.11-3.06 0 0 .97-.31 3.18 1.19a11 11 0 0 1 5.8 0c2.21-1.5 3.18-1.19 3.18-1.19.63 1.59.24 2.77.12 3.06.75.81 1.2 1.84 1.2 3.1 0 4.41-2.69 5.39-5.25 5.67.42.36.8 1.07.8 2.16v3.21c0 .32.21.69.8.57A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5Z"/>
+        </svg>
+      </a>
     </div>
-  </div>
-</div>
-</div> </section>
+  </form>
+</section>
+</div> <footer class="footer">© <span id="year"></span> AlgoRhythm</footer> <script src="app.js"></script> </body> </html>
