--- a/index.html
+++ b/index.html
@@ -1,80 +1,118 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>AlgoRhythm | Sign In / Sign Up</title> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet"> <link rel="stylesheet" href="styles.css" /> </head> <body> <!-- 3D background: coding matrix + music EQ --> <div class="bg3d"> <canvas id="bgCanvas" aria-hidden="true"></canvas> <div class="bg-blobs blob-1"></div> <div class="bg-blobs blob-2"></div> </div> <!-- Header --> <header class="header"> <div class="brand"> <div class="brand-logo">AR</div> <div class="brand-name">AlgoRhythm</div> </div> <a class="brand-link" href="/">Back to Home</a> </header> <!-- Auth container --> <div class="container" id="container"> <!-- Toggle background band --> <div class="toggle-box"> <div class="toggle-panel toggle-left"> <h1>Join the flow</h1> <p>Code together, sync playlists, and track progress.</p> <button class="btn" id="toRegister">Create account</button> </div> <div class="toggle-panel toggle-right"> <h1>Welcome back</h1> <p>Keep coding in sync — sign in to continue.</p> <button class="btn" id="toLogin">Sign in</button> </div> </div> <!-- Sign In -->
-<section class="form-box login">
-  <form id="loginForm" autocomplete="on">
-    <h1>Sign In</h1>
-    <p>Continue with email or use social login.</p>
 
-    <div class="input-box">
-      <input type="email" id="loginEmail" placeholder="Email" required />
-      <i>@</i>
-    </div>
-    <div class="input-box">
-      <input type="password" id="loginPassword" placeholder="Password" minlength="6" required />
-      <i>-  -  - </i>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AlgoRhythm | Sign In</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <!-- Three.js (Option B) -->
+  <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+</head>
+<body>
+  <header class="brand">
+    <div class="brand__logo">AR</div>
+    <div class="brand__name">AlgoRhythm</div>
+  </header>
 
-    <div class="forgot-link">
-      <a href="/forgot">Forgot password?</a>
-    </div>
+  <div class="container" id="container">
+    <!-- Decorative / toggle background -->
+    <div class="toggle-bg"></div>
 
-    <button class="btn" type="submit">Sign In</button>
+    <!-- Three.js canvas (background) -->
+    <canvas id="scene3d" aria-hidden="true"></canvas>
 
-    <p style="margin:14px 0 8px;color:var(--muted)">Or continue with</p>
-    <div class="social-icons">
-      <a id="loginGoogle" title="Google" aria-label="Sign in with Google">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M23.04 12.261c0-.815-.073-1.6-.209-2.352H12v4.45h6.19a5.29 5.29 0 0 1-2.293 3.47v2.878h3.71c2.176-2.003 3.433-4.956 3.433-8.446Z" fill="#4285F4"/>
-          <path d="M12 24c3.105 0 5.713-1.03 7.618-2.793l-3.71-2.878c-1.03.69-2.35 1.1-3.908 1.1-3.004 0-5.55-2.03-6.458-4.76H1.704v2.987A11.997 11.997 0 0 0 12 24Z" fill="#34A853"/>
-          <path d="M5.542 14.67A7.2 7.2 0 0 1 5.17 12c0-.93.16-1.83.372-2.67V6.343H1.704A12 12 0 0 0 0 12c0 1.92.46 3.73 1.704 5.657L5.542 14.67Z" fill="#FBBC04"/>
-          <path d="M12 4.75c1.686 0 3.197.58 4.387 1.72l3.29-3.29C17.705 1.17 15.105 0 12 0 7.704 0 3.996 2.457 1.704 6.343L5.54 9.33C6.45 6.6 8.996 4.75 12 4.75Z" fill="#EA4335"/>
-        </svg>
-      </a>
-      <a id="loginGithub" title="GitHub" aria-label="Sign in with GitHub">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M12 .5A11.5 11.5 0 0 0 .5 12c0 5.08 3.29 9.38 7.86 10.89.58.11.79-.26.79-.57v-2.2c-3.2.71-3.87-1.37-3.87-1.37-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.7.08-.7 1.18.08 1.81 1.22 1.81 1.22 1.05 1.81 2.77 1.29 3.45.98.11-.77.41-1.29.74-1.58-2.55-.29-5.23-1.28-5.23-5.68 0-1.26.45-2.29 1.2-3.1-.12-.29-.52-1.47.11-3.06 0 0 .97-.31 3.18 1.19a11 11 0 0 1 5.8 0c2.21-1.5 3.18-1.19 3.18-1.19.63 1.59.24 2.77.12 3.06.75.81 1.2 1.84 1.2 3.1 0 4.41-2.69 5.39-5.25 5.67.42.36.8 1.07.8 2.16v3.21c0 .32.21.69.8.57A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5Z"/>
-        </svg>
-      </a>
-    </div>
-  </form>
-</section>
+    <!-- Login form -->
+    <section class="form-box login">
+      <div class="form-box__inner">
+        <h1>Welcome back</h1>
+        <p>Sign in to keep coding in sync.</p>
 
-<!-- Sign Up -->
-<section class="form-box register" aria-hidden="true">
-  <form id="registerForm" autocomplete="on">
-    <h1>Create Account</h1>
-    <p>Start collaborating on problems and playlists.</p>
+        <form id="loginForm" autocomplete="on">
+          <!-- Social sign-in -->
+          <div class="social-auth">
+            <button type="button" class="btn social google" id="googleLogin" aria-label="Continue with Google">
+              <svg aria-hidden="true" width="18" height="18" viewBox="0 0 48 48"><path fill="#FFC107" d="M43.6 20.5H42V20H24v8h11.3C33.9 31.7 29.4 35 24 35c-6.6 0-12-5.4-12-12s5.4-12 12-12c3 0 5.7 1.1 7.8 3l5.7-5.7C33.6 5.1 28.9 3 24 3 12.4 3 3 12.4 3 24s9.4 21 21 21c10.5 0 20-7.6 20-21 0-1.2-.1-2.4-.4-3.5z"/><path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.6 16.3 18.9 13 24 13c3 0 5.7 1.1 7.8 3l5.7-5.7C33.6 5.1 28.9 3 24 3 16 3 9.2 7.6 6.3 14.7z"/><path fill="#4CAF50" d="M24 45c5.3 0 10.1-2 13.6-5.2l-6.3-5.2C29.4 35 26.9 36 24 36c-5.3 0-9.8-3.3-11.4-8l-6.6 5.1C8.9 40.4 15.9 45 24 45z"/><path fill="#1976D2" d="M43.6 20.5H42V20H24v8h11.3c-1.3 3.8-4.9 7-9.3 7-5.3 0-9.8-3.3-11.4-8l-6.6 5.1C8.9 40.4 15.9 45 24 45c10.5 0 20-7.6 20-21 0-1.2-.1-2.4-.4-3.5z"/></svg>
+              <span>Continue with Google</span>
+            </button>
 
-    <div class="input-box">
-      <input type="text" id="regName" placeholder="Full name" required />
-      <i>👤</i>
-    </div>
-    <div class="input-box">
-      <input type="email" id="regEmail" placeholder="Email" required />
-      <i>@</i>
-    </div>
-    <div class="input-box">
-      <input type="password" id="regPassword" placeholder="Password (min 6 chars)" minlength="6" required />
-      <i>-  -  - </i>
-    </div>
+            <button type="button" class="btn social github" id="githubLogin" aria-label="Continue with GitHub">
+              <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.2 3.4 9.6 8.2 11.1.6.1.8-.3.8-.6v-2c-3.3.7-4-1.4-4-1.4-.6-1.4-1.5-1.8-1.5-1.8-1.2-.8.1-.8.1-.8 1.3.1 2 1.4 2 1.4 1.2 2 3.1 1.4 3.8 1 .1-.9.5-1.4.9-1.8-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.5 1.3-3.4-.1-.3-.6-1.7.1-3.5 0 0 1.1-.4 3.6 1.3a12.3 12.3 0 0 1 6.6 0c2.5-1.7 3.6-1.3 3.6-1.3.7 1.8.2 3.2.1 3.5.8.9 1.3 2 1.3 3.4 0 4.8-2.9 5.9-5.6 6.2.5.4 1 1.3 1.1 2v3c0 .3.2.7.9.6 4.8-1.5 8.2-5.9 8.2-11.1A11.5 11.5 0 0 0 12 .5z"/></svg>
+              <span>Continue with GitHub</span>
+            </button>
 
-    <button class="btn" type="submit">Sign Up</button>
+            <div class="divider" role="separator" aria-label="or">or</div>
+          </div>
 
-    <p style="margin:14px 0 8px;color:var(--muted)">Or continue with</p>
-    <div class="social-icons">
-      <a id="signupGoogle" title="Google" aria-label="Sign up with Google">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path d="M23.04 12.261c0-.815-.073-1.6-.209-2.352H12v4.45h6.19a5.29 5.29 0 0 1-2.293 3.47v2.878h3.71c2.176-2.003 3.433-4.956 3.433-8.446Z" fill="#4285F4"/>
-          <path d="M12 24c3.105 0 5.713-1.03 7.618-2.793l-3.71-2.878c-1.03.69-2.35 1.1-3.908 1.1-3.004 0-5.55-2.03-6.458-4.76H1.704v2.987A11.997 11.997 0 0 0 12 24Z" fill="#34A853"/>
-          <path d="M5.542 14.67A7.2 7.2 0 0 1 5.17 12c0-.93.16-1.83.372-2.67V6.343H1.704A12 12 0 0 0 0 12c0 1.92.46 3.73 1.704 5.657L5.542 14.67Z" fill="#FBBC04"/>
-          <path d="M12 4.75c1.686 0 3.197.58 4.387 1.72l3.29-3.29C17.705 1.17 15.105 0 12 0 7.704 0 3.996 2.457 1.704 6.343L5.54 9.33C6.45 6.6 8.996 4.75 12 4.75Z" fill="#EA4335"/>
-        </svg>
-      </a>
-      <a id="signupGithub" title="GitHub" aria-label="Sign up with GitHub">
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-          <path fill-rule="evenodd" clip-rule="evenodd" d="M12 .5A11.5 11.5 0 0 0 .5 12c0 5.08 3.29 9.38 7.86 10.89.58.11.79-.26.79-.57v-2.2c-3.2.71-3.87-1.37-3.87-1.37-.53-1.34-1.3-1.7-1.3-1.7-1.06-.72.08-.7.08-.7 1.18.08 1.81 1.22 1.81 1.22 1.05 1.81 2.77 1.29 3.45.98.11-.77.41-1.29.74-1.58-2.55-.29-5.23-1.28-5.23-5.68 0-1.26.45-2.29 1.2-3.1-.12-.29-.52-1.47.11-3.06 0 0 .97-.31 3.18 1.19a11 11 0 0 1 5.8 0c2.21-1.5 3.18-1.19 3.18-1.19.63 1.59.24 2.77.12 3.06.75.81 1.2 1.84 1.2 3.1 0 4.41-2.69 5.39-5.25 5.67.42.36.8 1.07.8 2.16v3.21c0 .32.21.69.8.57A11.5 11.5 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5Z"/>
-        </svg>
-      </a>
-    </div>
-  </form>
-</section>
-</div> <footer class="footer">© <span id="year"></span> AlgoRhythm</footer> <script src="app.js"></script> </body> </html>
+          <div class="input-box">
+            <input type="email" id="loginEmail" placeholder="Email" required />
+            <i class="icon">@</i>
+          </div>
+          <div class="input-box">
+            <input type="password" id="loginPassword" placeholder="Password" minlength="6" required />
+            <i class="icon">-  -  - </i>
+          </div>
+          <div class="forgot-link">
+            <a href="#" id="forgotLink">Forgot password?</a>
+          </div>
+          <button type="submit" class="btn primary">Sign In</button>
+        </form>
+
+        <div class="alt">
+          <span>New to AlgoRhythm?</span>
+          <button class="btn ghost" id="toRegister">Create account</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Register form -->
+    <section class="form-box register" aria-hidden="true">
+      <div class="form-box__inner">
+        <h1>Create account</h1>
+        <p>Join the flow — share problems, discuss solutions, sync music.</p>
+
+        <form id="registerForm" autocomplete="on">
+          <!-- Social sign-in -->
+          <div class="social-auth">
+            <button type="button" class="btn social google" id="googleLogin" aria-label="Continue with Google">
+              <svg aria-hidden="true" width="18" height="18" viewBox="0 0 48 48"><path fill="#FFC107" d="M43.6 20.5H42V20H24v8h11.3C33.9 31.7 29.4 35 24 35c-6.6 0-12-5.4-12-12s5.4-12 12-12c3 0 5.7 1.1 7.8 3l5.7-5.7C33.6 5.1 28.9 3 24 3 12.4 3 3 12.4 3 24s9.4 21 21 21c10.5 0 20-7.6 20-21 0-1.2-.1-2.4-.4-3.5z"/><path fill="#FF3D00" d="M6.3 14.7l6.6 4.8C14.6 16.3 18.9 13 24 13c3 0 5.7 1.1 7.8 3l5.7-5.7C33.6 5.1 28.9 3 24 3 16 3 9.2 7.6 6.3 14.7z"/><path fill="#4CAF50" d="M24 45c5.3 0 10.1-2 13.6-5.2l-6.3-5.2C29.4 35 26.9 36 24 36c-5.3 0-9.8-3.3-11.4-8l-6.6 5.1C8.9 40.4 15.9 45 24 45z"/><path fill="#1976D2" d="M43.6 20.5H42V20H24v8h11.3c-1.3 3.8-4.9 7-9.3 7-5.3 0-9.8-3.3-11.4-8l-6.6 5.1C8.9 40.4 15.9 45 24 45c10.5 0 20-7.6 20-21 0-1.2-.1-2.4-.4-3.5z"/></svg>
+              <span>Continue with Google</span>
+            </button>
+
+            <button type="button" class="btn social github" id="githubLogin" aria-label="Continue with GitHub">
+              <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .5A11.5 11.5 0 0 0 .5 12.3c0 5.2 3.4 9.6 8.2 11.1.6.1.8-.3.8-.6v-2c-3.3.7-4-1.4-4-1.4-.6-1.4-1.5-1.8-1.5-1.8-1.2-.8.1-.8.1-.8 1.3.1 2 1.4 2 1.4 1.2 2 3.1 1.4 3.8 1 .1-.9.5-1.4.9-1.8-2.7-.3-5.6-1.4-5.6-6.2 0-1.4.5-2.5 1.3-3.4-.1-.3-.6-1.7.1-3.5 0 0 1.1-.4 3.6 1.3a12.3 12.3 0 0 1 6.6 0c2.5-1.7 3.6-1.3 3.6-1.3.7 1.8.2 3.2.1 3.5.8.9 1.3 2 1.3 3.4 0 4.8-2.9 5.9-5.6 6.2.5.4 1 1.3 1.1 2v3c0 .3.2.7.9.6 4.8-1.5 8.2-5.9 8.2-11.1A11.5 11.5 0 0 0 12 .5z"/></svg>
+              <span>Continue with GitHub</span>
+            </button>
+
+            <div class="divider" role="separator" aria-label="or">or</div>
+          </div>
+
+          <div class="input-box">
+            <input type="text" id="regName" placeholder="Full name" required />
+            <i class="icon">👤</i>
+          </div>
+          <div class="input-box">
+            <input type="email" id="regEmail" placeholder="Email" required />
+            <i class="icon">@</i>
+          </div>
+          <div class="input-box">
+            <input type="password" id="regPassword" placeholder="Password (min 6 chars)" minlength="6" required />
+            <i class="icon">-  -  - </i>
+          </div>
+
+          <button type="submit" class="btn primary">Sign Up</button>
+        </form>
+
+        <div class="alt">
+          <span>Already have an account?</span>
+          <button class="btn ghost" id="toLogin">Sign in</button>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <script src="app.js"></script>
+</body>
+</html>
