--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <canvas id="scene3d" aria-hidden="true"></canvas>
 
     <!-- Login form -->
-    <section class="form-box login">
+    <section class="form-box login" aria-hidden="false">
       <div class="form-box__inner">
         <h1>Welcome back</h1>
         <p>Sign in to keep coding in sync.</p>
