--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <div class="form-box__inner">
         <h1>Welcome back</h1>
         <p>Sign in to keep coding in sync.</p>
-
         <form id="loginForm" autocomplete="on">
           <div class="input-box">
             <input type="email" id="loginEmail" placeholder="Email" required />
@@ -36,7 +35,6 @@
           </div>
           <button type="submit" class="btn primary">Sign In</button>
         </form>
-
         <div class="alt">
           <span>New to AlgoRhythm?</span>
           <button class="btn ghost" id="toRegister" type="button">Create account</button>
@@ -49,7 +47,6 @@
       <div class="form-box__inner">
         <h1>Create account</h1>
         <p>Join the flow — share problems, discuss solutions, sync music.</p>
-
         <form id="registerForm" autocomplete="on">
           <div class="input-box">
             <input type="text" id="regName" placeholder="Full name" required />
@@ -65,8 +62,7 @@
           </div>
           <button type="submit" class="btn primary">Sign Up</button>
         </form>
-
-        <!-- Back to sign-in option -->
+        <!-- "Already have an account?" option -->
         <div class="alt">
           <span>Already have an account?</span>
           <button class="btn ghost" id="toLogin" type="button">Sign in</button>
@@ -74,7 +70,6 @@
       </div>
     </section>
   </div>
-
   <script src="app.js"></script>
 </body>
 </html>
