--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="toggle-bg"></div>
     <canvas id="scene3d" aria-hidden="true"></canvas>
 
-    <!-- Login -->
+    <!-- Login Panel -->
     <section class="form-box login" aria-hidden="false">
       <div class="form-box__inner">
         <h1>Welcome back</h1>
@@ -42,7 +42,7 @@
       </div>
     </section>
 
-    <!-- Register -->
+    <!-- Register Panel -->
     <section class="form-box register" aria-hidden="true">
       <div class="form-box__inner">
         <h1>Create account</h1>
@@ -62,7 +62,6 @@
           </div>
           <button type="submit" class="btn primary">Sign Up</button>
         </form>
-        <!-- "Already have an account?" option -->
         <div class="alt">
           <span>Already have an account?</span>
           <button class="btn ghost" id="toLogin" type="button">Sign in</button>
