--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AlgoRhythm | Sign In</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>AlgoRhythm | Sign In</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles.css">
+<script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
 </head>
 <body>
   <header class="brand">
@@ -19,7 +18,7 @@
     <div class="toggle-bg"></div>
     <canvas id="scene3d" aria-hidden="true"></canvas>
 
-    <!-- Login Panel -->
+    <!-- LOGIN PANEL -->
     <section class="form-box login" aria-hidden="false">
       <div class="form-box__inner">
         <h1>Welcome back</h1>
@@ -31,7 +30,7 @@
           </div>
           <div class="input-box">
             <input type="password" id="loginPassword" placeholder="Password" minlength="6" required />
-            <i class="icon">- - - </i>
+            <i class="icon">•••</i>
           </div>
           <button type="submit" class="btn primary">Sign In</button>
         </form>
@@ -42,7 +41,7 @@
       </div>
     </section>
 
-    <!-- Register Panel -->
+    <!-- REGISTER PANEL -->
     <section class="form-box register" aria-hidden="true">
       <div class="form-box__inner">
         <h1>Create account</h1>
@@ -58,7 +57,7 @@
           </div>
           <div class="input-box">
             <input type="password" id="regPassword" placeholder="Password (min 6 chars)" minlength="6" required />
-            <i class="icon">- - - </i>
+            <i class="icon">•••</i>
           </div>
           <button type="submit" class="btn primary">Sign Up</button>
         </form>
@@ -69,6 +68,6 @@
       </div>
     </section>
   </div>
-  <script src="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
