--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
   <div class="container" id="container">
     <canvas id="matrix-bg" aria-hidden="true"></canvas>
 
-    <!-- LOGIN PANEL -->
+    <!-- LOGIN -->
     <section class="form-box login" aria-hidden="false">
       <div class="form-box__inner">
         <h1>Welcome back</h1>
         <p>Sign in to keep coding in sync.</p>
+
+        <!-- Social -->
+        <div class="social-auth">
+          <button type="button" class="btn social google googleLogin" aria-label="Continue with Google">
+            <span>Continue with Google</span>
+          </button>
+          <button type="button" class="btn social github githubLogin" aria-label="Continue with GitHub">
+            <span>Continue with GitHub</span>
+          </button>
+          <div class="divider">or</div>
+        </div>
+
         <form id="loginForm">
           <div class="input-box">
             <input type="email" id="loginEmail" placeholder="Email" required />
@@ -39,11 +51,23 @@
       </div>
     </section>
 
-    <!-- REGISTER PANEL -->
+    <!-- REGISTER -->
     <section class="form-box register" aria-hidden="true">
       <div class="form-box__inner">
         <h1>Create account</h1>
         <p>Join the flow — share problems, discuss solutions, sync music.</p>
+
+        <!-- Social -->
+        <div class="social-auth">
+          <button type="button" class="btn social google googleLogin" aria-label="Continue with Google">
+            <span>Continue with Google</span>
+          </button>
+          <button type="button" class="btn social github githubLogin" aria-label="Continue with GitHub">
+            <span>Continue with GitHub</span>
+          </button>
+          <div class="divider">or</div>
+        </div>
+
         <form id="registerForm">
           <div class="input-box">
             <input type="text" id="regName" placeholder="Full name" required />
